Fix jdk 8 tests